[tool.poetry]
name = "simple-paketloss-log"
version = "0.1.0"
description = ""
authors = ["Felix Warmuth <felix.warmuth@mailbox.org>"]
readme = "README.md"
packages = [{include = "simple_paketloss_log"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
loguru = "^0.6.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simple-paketloss-log = "simple_paketloss_log.main:cli"
